fix fullscreen so it displays properly on mobile

--- a/source/sass/_utilities.scss
+++ b/source/sass/_utilities.scss
@@ -66,7 +66,9 @@
 }
 
 .fullscreen {
-  width: 100%;
-  height: 100vh;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   position: absolute;
 }
